[package]
name = "topspin"
version = "0.1.0"
authors = ["Yiran Sheng <https://github.com/yiransheng>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
druid = { version = "0.6.0", features = ["im"] }
toml = "0.5.6"
shell-words = "1.0.0"
