[package]
name = "topspin"
version = "0.1.0"
authors = ["Yiran Sheng <https://github.com/yiransheng>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
druid = { version = "0.6.0", features = ["im"] }
dirs = "1.0"
once_cell = "1.4.1"
structopt = "0.3"
daemonize = "0.4.1"
log = "0.4.5"
libc = "0.2"
simple_logger = "1.6.0"
toml = "0.5.6"
shell-words = "1.0.0"

[dev-dependencies]
rand = "0.7"
quickcheck = "0.9"
quickcheck_macros = "0.9"
